Bug 262316 Sort by date does not sort messages in thread by date. p=Teemu Mannermaa <wicked+bz@etlicon.fi>,r=bienvenu